--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -239,5 +239,12 @@
   },
   "protected": {
     "checking": "正在检查访问权限..."
+  },
+  "languages": {
+    "en": "英语",
+    "uz": "乌兹别克语",
+    "ru": "俄语",
+    "fr": "法语",
+    "zh": "中文"
   }
 }
